# sirius-erc2023

./: README.md
erc_description/: CMakeLists.txt  package.xml
erc_sim/: CMakeLists.txt  package.xml
erc_sim/launch/: main.launch.py  main.launch.xml  nav2.launch.py  test.launch.py
erc_sim/worlds/: marsyard2022.world
erc_teleop/: CMakeLists.txt  package.xml
sirius_sim/: CMakeLists.txt  package.xml
sirius_sim/launch/: sirius.launch
sirius_sim/urdf/: hokuyo_lidar.xacro  leo_erc_sim.urdf.xacro
