<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>erc_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="carlos@todo.todo">carlos</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <exec_depend>demo_nodes_cpp</exec_depend>
  <exec_depend>demo_nodes_py</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>

  <!-- from ERC Repo ROS1 -->
    <gazebo_ros gazebo_media_path="${prefix}/worlds:${prefix}/media"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
